--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,16 +7,47 @@ html {
   box-sizing: inherit; }
 
 html {
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  color: #323232; }
   html body header {
     position: fixed;
-    padding: 10px;
+    padding: 0 32px;
     top: 0;
     left: 0;
     right: 0;
     height: 66px;
     background: #fff;
-    box-shadow: inset 0 -1px 0 0 rgba(41, 37, 35, 0.1); }
+    box-shadow: inset 0 -1px 0 0 rgba(41, 37, 35, 0.1);
+    line-height: 66px; }
+    html body header nav a {
+      display: inline-block;
+      padding: 0px;
+      margin: 0 15px;
+      color: #545454;
+      font-weight: 500; }
+      html body header nav a.logo {
+        width: 54px;
+        text-indent: -999px;
+        background: url("../images/logo.svg") center center no-repeat; }
+      html body header nav a:hover {
+        color: #43b9dd; }
+      html body header nav a.active {
+        color: #43b9dd;
+        position: relative; }
+        html body header nav a.active:after {
+          content: "";
+          position: absolute;
+          bottom: 0px;
+          width: 100%;
+          height: 3px;
+          left: 0;
+          background: -moz-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+          background: -webkit-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+          background: linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%); }
+    html body header nav.left {
+      float: left; }
+    html body header nav.right {
+      float: right; }
   html body article {
     margin: 66px 420px 0 0;
     padding: 10px;
@@ -30,6 +61,9 @@ html {
       padding: 10px;
       box-shadow: 0 0 15px 0 rgba(41, 37, 35, 0.1);
       border-radius: 3px; }
+      html body article section #map {
+        width: 100%;
+        height: 400px; }
   html body aside {
     padding: 42px;
     position: fixed;
@@ -39,5 +73,46 @@ html {
     bottom: 0px;
     background: #fff;
     box-shadow: inset 1px 0 0 0 rgba(41, 37, 35, 0.1); }
-
-/*# sourceMappingURL=style.css.map */
+    html body aside button {
+      background: -moz-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+      background: -webkit-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+      background: linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+      width: 85%;
+      border: none;
+      padding: 0.6em 0;
+      border-radius: 4px;
+      outline: none;
+      margin: auto;
+      display: block;
+      color: #FFF;
+      font-size: 1.4em;
+      cursor: pointer; }
+    html body aside > div {
+      display: none; }
+      html body aside > div h2 {
+        font-size: 2em; }
+      html body aside > div ul {
+        margin: 15px 0 48px;
+        padding-left: 1.2em;
+        list-style: decimal; }
+        html body aside > div ul li {
+          margin: 5px 0; }
+      html body aside > div.state-2, html body aside > div.state-3, html body aside > div.state-4 {
+        color: #ccc; }
+        html body aside > div.state-2 div,
+        html body aside > div.state-2 li.active, html body aside > div.state-3 div,
+        html body aside > div.state-3 li.active, html body aside > div.state-4 div,
+        html body aside > div.state-4 li.active {
+          color: #323232; }
+        html body aside > div.state-2 > div p.center, html body aside > div.state-3 > div p.center, html body aside > div.state-4 > div p.center {
+          text-align: center; }
+        html body aside > div.state-2 > div form label, html body aside > div.state-3 > div form label, html body aside > div.state-4 > div form label {
+          display: block; }
+        html body aside > div.state-2 > div form input, html body aside > div.state-3 > div form input, html body aside > div.state-4 > div form input {
+          width: 100%;
+          border-width: 0 0 thin 0;
+          line-height: 1.8em;
+          margin-bottom: 10px;
+          outline: none; }
+        html body aside > div.state-2 button.fb, html body aside > div.state-3 button.fb, html body aside > div.state-4 button.fb {
+          background: #2f4d8b; }
