--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,21 @@ html {
 *:after {
   box-sizing: inherit; }
 
+button {
+  background: -moz-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+  background: -webkit-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+  background: linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
+  width: 85%;
+  border: none;
+  padding: 0.6em 0;
+  border-radius: 4px;
+  outline: none;
+  margin: auto;
+  display: block;
+  color: #FFF;
+  font-size: 1.4em;
+  cursor: pointer; }
+
 html {
   font-family: 'Roboto', sans-serif;
   color: #323232; }
@@ -61,9 +76,26 @@ html {
       padding: 10px;
       box-shadow: 0 0 15px 0 rgba(41, 37, 35, 0.1);
       border-radius: 3px; }
-      html body article section #map {
+      html body article section.right input {
+        width: 40%;
+        border-width: 0 0 thin 0;
+        line-height: 2.2em;
+        margin: 12px 0;
+        outline: none;
+        font-size: 1.4em; }
+      html body article section.right button {
+        margin: 12px 0;
+        width: 55%;
+        float: right; }
+      html body article section.right #map {
         width: 100%;
         height: 400px; }
+      html body article section.inactive {
+        background: #ccc;
+        cursor: none;
+        pointer-events: none; }
+        html body article section.inactive > * {
+          opacity: 0.3; }
   html body aside {
     padding: 42px;
     position: fixed;
@@ -73,20 +105,6 @@ html {
     bottom: 0px;
     background: #fff;
     box-shadow: inset 1px 0 0 0 rgba(41, 37, 35, 0.1); }
-    html body aside button {
-      background: -moz-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
-      background: -webkit-linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
-      background: linear-gradient(45deg, #14a8d5 0%, #4aced6 60%, #69e4d7 100%);
-      width: 85%;
-      border: none;
-      padding: 0.6em 0;
-      border-radius: 4px;
-      outline: none;
-      margin: auto;
-      display: block;
-      color: #FFF;
-      font-size: 1.4em;
-      cursor: pointer; }
     html body aside > div {
       display: none; }
       html body aside > div h2 {
