--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ button {
   color: #FFF;
   font-size: 1.4em;
   cursor: pointer; }
+  button:disabled {
+    background: #999;
+    pointer-events: none;
+    cursor: none; }
 
 html {
   font-family: 'Roboto', sans-serif;
@@ -76,26 +80,41 @@ html {
       padding: 10px;
       box-shadow: 0 0 15px 0 rgba(41, 37, 35, 0.1);
       border-radius: 3px; }
-      html body article section.right input {
+      html body article section.right > div.head input {
         width: 40%;
         border-width: 0 0 thin 0;
         line-height: 2.2em;
         margin: 12px 0;
         outline: none;
         font-size: 1.4em; }
-      html body article section.right button {
+      html body article section.right > div.head button {
         margin: 12px 0;
         width: 55%;
         float: right; }
       html body article section.right #map {
         width: 100%;
         height: 400px; }
+      html body article section.right div.img button {
+        margin: 24px auto;
+        width: 50%; }
+      html body article section.right div.img img {
+        width: 326px;
+        display: block;
+        margin: 24px auto; }
       html body article section.inactive {
-        background: #ccc;
         cursor: none;
-        pointer-events: none; }
-        html body article section.inactive > * {
-          opacity: 0.3; }
+        pointer-events: none;
+        position: relative; }
+        html body article section.inactive:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: #999;
+          opacity: 0.72;
+          border-radius: 3px; }
   html body aside {
     padding: 42px;
     position: fixed;
