--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@ html {
     height: 66px;
     background: #fff;
     box-shadow: inset 0 -1px 0 0 rgba(41, 37, 35, 0.1);
-    line-height: 66px; }
+    line-height: 66px;
+    z-index: 2; }
     html body header nav a {
       display: inline-block;
       padding: 0px;
@@ -74,7 +75,7 @@ html {
     background: #fafafa; }
     html body article section {
       width: 40%;
-      margin: 5%;
+      margin: 2% 5% 0;
       background: #fff;
       float: left;
       padding: 10px;
