--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,7 @@ html {
             background: #fff;
             box-shadow: inset 0 -1px 0 0 rgba(41, 37, 35, 0.1);
             line-height: 66px;
+            z-index: 2;
             nav {
                 a {
                     display: inline-block;
@@ -75,10 +76,14 @@ html {
                     }
                 }
                 &.left {
-                    float: left
+                    float: left;
                 }
                 &.right {
-                    float: right
+                    float: right;
+                    img {
+                        height: 32px;
+                        vertical-align: middle;
+                    }
                 }
             }
         }
@@ -89,7 +94,7 @@ html {
             background: #fafafa;
             section {
                 width: 40%;
-                margin: 5%;
+                margin: 2% 5% 0;
                 background: #fff;
                 float: left;
                 padding: 10px;
